[FIX] spacing at movements in Overview

--- a/src/components/Overview/index.module.css
+++ b/src/components/Overview/index.module.css
@@ -61,7 +61,7 @@
 .movements {
 	display: flex;
 	flex-direction: column;
-	padding: var(--space-xl);
+	padding: var(--space-lg) var(--space-xl);
 }
 
 .movement {
@@ -69,7 +69,7 @@
 	align-items: center;
 
 	width: 100%;
-	margin-bottom: var(--space-xl);
+	margin-bottom: var(--space-lg);
 }
 
 .movementImg {
